--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,17 @@
 		<dependency>
       		<groupId>org.springdoc</groupId>
       		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      	<version>2.4.0</version>
-   </dependency>
+      		<version>2.4.0</version>
+   		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
